app/src/main/java/com/example/androidmvvm/core/error/FailureHandler.kt
package com.example.androidmvvm.core.error

interface FailureHandler {
    fun handleThrowable(throwable: Throwable): Failure?
}